# CSRNet-caffe

./: .gitattributes  README.md  create_lmdb.sh  crowd_test.m  deploy.prototxt  solver.prototxt  train.prototxt  train_CSRNet.sh
caffe-CSRNet/: CMakeLists.txt
caffe-CSRNet/cmake/: Dependencies.cmake
caffe-CSRNet/python/: bash.sh  install.sh  requirements.txt
caffe-CSRNet/src/caffe/layers/: euclidean_loss_norm_layer.cpp  image_data_layer.cpp
csv2lmdb/: CMakeLists.txt  main.cpp
generate_density/: create_gt_test_set.m  create_gt_train_set.m  get_density_map_gaussian.m
readPicList/: addSuffix.py  img_train.txt  label.txt  readPicList.py  test_list.txt  train_list.txt
